# NovelGameEngineSFML

./: .gitignore  CMakeLists.txt  COMPILE_ENGINE.bat  README.md
src/: main.cpp
src/Private/: Config.cpp  ConfigParser.cpp  Engine.cpp  Game.cpp  GameController.cpp  GameStates.cpp  Logger.cpp  SceneController.cpp  Script.cpp  Utils.cpp
src/Private/GUI/: Button.cpp  DialogBox.cpp  Menu.cpp  MenuBox.cpp
src/Private/Game/: BUILD_GAME.bat  CMakeLists.txt  Config.cpp  GameStates.cpp  INSTALL_GAME.bat  Script.cpp  script.py
src/Private/Game/Cofig/: Config.cpp  ConfigParser.cpp
src/Private/Game/Script/: Script.cpp
src/Private/Main/: Engine.cpp  main.cpp
src/Private/Scene/: SceneController.cpp  SceneSprite.cpp
src/Private/Scene/GUI/: Button.cpp  DialogBox.cpp  MenuBox.cpp
src/Public/: BaseController.h  Character.h  Config.h  Engine.h  FPS.h  Game.h  GameController.h  GameStates.h  Logger.h  SceneController.h  Script.h  Utils.h
src/Public/GUI/: Button.h  DialogBox.h  GUI.h  Menu.h  MenuBox.h
src/Public/Game/: GameStates.h
src/Public/Game/Config/: Config.h  ConfigParser.h
src/Public/Main/: Engine.h
src/Public/Scene/: GUI.h  SceneController.h  SceneItem.h  SceneSprite.h
src/Public/Scene/GUI/: Button.h  DialogBox.h  MenuBox.h
