cmake_minimum_required(VERSION 3.16)

project(GameSource)

set(CMAKE_INSTALL_PREFIX D:/prog/cpp/GameProject/Game)

file(GLOB LIB_FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/libs/*.lib)
file(GLOB DLL_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.dll)
file(GLOB EXE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.exe)

set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR})

add_library(Game SHARED ${CMAKE_CURRENT_SOURCE_DIR}/GameStates.cpp)
target_link_libraries(Game PRIVATE ${LIB_FILES})
target_link_libraries(Game PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Scene.lib)
target_include_directories(Game PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include/Public)
set_target_properties(Game PROPERTIES OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})

install(DIRECTORY game DESTINATION ${CMAKE_INSTALL_PREFIX})
install(PROGRAMS ${DLL_FILES} DESTINATION ${CMAKE_INSTALL_PREFIX})
install(PROGRAMS ${EXE_FILES} DESTINATION ${CMAKE_INSTALL_PREFIX})
